--- a/Lake Bilancino.ipynb
+++ b/Lake Bilancino.ipynb
@@ -2030,25 +2030,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 59,
    "id": "b11d24ab",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(855, 49)"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "values = df1.values\n",
-    "train = series_to_supervised(values, df1, n_in=6)\n",
-    "train.shape"
+    "train = series_to_supervised(values, df1, n_in=6)"
    ]
   },
   {
@@ -2091,30 +2079,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "id": "18609947",
    "metadata": {},
    "outputs": [],
    "source": [
-    "row = X[-20:]\n",
+    "row = X[-15:]\n",
     "yhat = model_ll.predict(row)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "id": "621c1ede",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[249.97311,\n",
-       " 250.65205,\n",
-       " 250.38086,\n",
-       " 250.60732,\n",
-       " 250.67001,\n",
-       " 249.7016,\n",
+       "[249.7016,\n",
        " 250.92906,\n",
        " 250.89568,\n",
        " 250.9342,\n",
@@ -2131,13 +2114,13 @@
        " 250.89348]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list_yhat = [yhat[i] for i in range(20)]\n",
+    "list_yhat = [yhat[i] for i in range(15)]\n",
     "list_yhat"
    ]
   },
@@ -2211,30 +2194,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "id": "153b9da5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "row_fr = X[-20:]\n",
+    "row_fr = X[-15:]\n",
     "yhat = model_fr.predict(row_fr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 63,
    "id": "88fdb182",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.5745941,\n",
-       " 1.3434716,\n",
-       " 12.609982,\n",
-       " 12.421269,\n",
-       " 3.9121013,\n",
-       " 0.79100084,\n",
+       "[0.79100084,\n",
        " 1.0463052,\n",
        " 2.4575517,\n",
        " 0.0980383,\n",
@@ -2251,13 +2229,13 @@
        " 1.4030609]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list_yhat = [yhat[i] for i in range(20)]\n",
+    "list_yhat = [yhat[i] for i in range(15)]\n",
     "list_yhat"
    ]
   },
