--- a/Aquifer_Petrignano.ipynb
+++ b/Aquifer_Petrignano.ipynb
@@ -9,8 +9,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a1d6d4e8",
+   "metadata": {},
+   "source": [
+    "<img src=\"Aquifer_Petrignano.png\" alt=\"Drawing\" style=\"width: 40px; height: 30px;\"/>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "id": "52aa6784",
    "metadata": {},
    "outputs": [
@@ -128,7 +136,7 @@
        "4                    NaN                                   NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "id": "7721366e",
    "metadata": {},
    "outputs": [
@@ -258,7 +266,7 @@
        "4                                   2.3  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "id": "8d807a09",
    "metadata": {},
    "outputs": [
@@ -389,7 +397,7 @@
        "4               2.3  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "id": "e0dec938",
    "metadata": {},
    "outputs": [
@@ -443,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "id": "9bb826b2",
    "metadata": {
     "scrolled": true
@@ -453,11 +461,11 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_0bb02_row0_col0, #T_0bb02_row1_col0, #T_0bb02_row2_col0, #T_0bb02_row3_col0, #T_0bb02_row4_col0 {\n",
+       "#T_1a279_row0_col0, #T_1a279_row1_col0, #T_1a279_row2_col0, #T_1a279_row3_col0, #T_1a279_row4_col0 {\n",
        "  background-color: lightblue;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_0bb02_\">\n",
+       "<table id=\"T_1a279_\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
@@ -471,58 +479,58 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_0bb02_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_0bb02_row0_col0\" class=\"data row0 col0\" >2009-01-01 00:00:00</td>\n",
-       "      <td id=\"T_0bb02_row0_col1\" class=\"data row0 col1\" >0.000000</td>\n",
-       "      <td id=\"T_0bb02_row0_col2\" class=\"data row0 col2\" >-31.140000</td>\n",
-       "      <td id=\"T_0bb02_row0_col3\" class=\"data row0 col3\" >5.200000</td>\n",
-       "      <td id=\"T_0bb02_row0_col4\" class=\"data row0 col4\" >-24530.688000</td>\n",
-       "      <td id=\"T_0bb02_row0_col5\" class=\"data row0 col5\" >2.400000</td>\n",
+       "      <th id=\"T_1a279_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_1a279_row0_col0\" class=\"data row0 col0\" >2009-01-01 00:00:00</td>\n",
+       "      <td id=\"T_1a279_row0_col1\" class=\"data row0 col1\" >0.000000</td>\n",
+       "      <td id=\"T_1a279_row0_col2\" class=\"data row0 col2\" >-31.140000</td>\n",
+       "      <td id=\"T_1a279_row0_col3\" class=\"data row0 col3\" >5.200000</td>\n",
+       "      <td id=\"T_1a279_row0_col4\" class=\"data row0 col4\" >-24530.688000</td>\n",
+       "      <td id=\"T_1a279_row0_col5\" class=\"data row0 col5\" >2.400000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_0bb02_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_0bb02_row1_col0\" class=\"data row1 col0\" >2009-01-02 00:00:00</td>\n",
-       "      <td id=\"T_0bb02_row1_col1\" class=\"data row1 col1\" >0.000000</td>\n",
-       "      <td id=\"T_0bb02_row1_col2\" class=\"data row1 col2\" >-31.110000</td>\n",
-       "      <td id=\"T_0bb02_row1_col3\" class=\"data row1 col3\" >2.300000</td>\n",
-       "      <td id=\"T_0bb02_row1_col4\" class=\"data row1 col4\" >-28785.888000</td>\n",
-       "      <td id=\"T_0bb02_row1_col5\" class=\"data row1 col5\" >2.500000</td>\n",
+       "      <th id=\"T_1a279_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_1a279_row1_col0\" class=\"data row1 col0\" >2009-01-02 00:00:00</td>\n",
+       "      <td id=\"T_1a279_row1_col1\" class=\"data row1 col1\" >0.000000</td>\n",
+       "      <td id=\"T_1a279_row1_col2\" class=\"data row1 col2\" >-31.110000</td>\n",
+       "      <td id=\"T_1a279_row1_col3\" class=\"data row1 col3\" >2.300000</td>\n",
+       "      <td id=\"T_1a279_row1_col4\" class=\"data row1 col4\" >-28785.888000</td>\n",
+       "      <td id=\"T_1a279_row1_col5\" class=\"data row1 col5\" >2.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_0bb02_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_0bb02_row2_col0\" class=\"data row2 col0\" >2009-01-03 00:00:00</td>\n",
-       "      <td id=\"T_0bb02_row2_col1\" class=\"data row2 col1\" >0.000000</td>\n",
-       "      <td id=\"T_0bb02_row2_col2\" class=\"data row2 col2\" >-31.070000</td>\n",
-       "      <td id=\"T_0bb02_row2_col3\" class=\"data row2 col3\" >4.400000</td>\n",
-       "      <td id=\"T_0bb02_row2_col4\" class=\"data row2 col4\" >-25766.208000</td>\n",
-       "      <td id=\"T_0bb02_row2_col5\" class=\"data row2 col5\" >2.400000</td>\n",
+       "      <th id=\"T_1a279_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_1a279_row2_col0\" class=\"data row2 col0\" >2009-01-03 00:00:00</td>\n",
+       "      <td id=\"T_1a279_row2_col1\" class=\"data row2 col1\" >0.000000</td>\n",
+       "      <td id=\"T_1a279_row2_col2\" class=\"data row2 col2\" >-31.070000</td>\n",
+       "      <td id=\"T_1a279_row2_col3\" class=\"data row2 col3\" >4.400000</td>\n",
+       "      <td id=\"T_1a279_row2_col4\" class=\"data row2 col4\" >-25766.208000</td>\n",
+       "      <td id=\"T_1a279_row2_col5\" class=\"data row2 col5\" >2.400000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_0bb02_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_0bb02_row3_col0\" class=\"data row3 col0\" >2009-01-04 00:00:00</td>\n",
-       "      <td id=\"T_0bb02_row3_col1\" class=\"data row3 col1\" >0.000000</td>\n",
-       "      <td id=\"T_0bb02_row3_col2\" class=\"data row3 col2\" >-31.050000</td>\n",
-       "      <td id=\"T_0bb02_row3_col3\" class=\"data row3 col3\" >0.800000</td>\n",
-       "      <td id=\"T_0bb02_row3_col4\" class=\"data row3 col4\" >-27919.296000</td>\n",
-       "      <td id=\"T_0bb02_row3_col5\" class=\"data row3 col5\" >2.400000</td>\n",
+       "      <th id=\"T_1a279_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_1a279_row3_col0\" class=\"data row3 col0\" >2009-01-04 00:00:00</td>\n",
+       "      <td id=\"T_1a279_row3_col1\" class=\"data row3 col1\" >0.000000</td>\n",
+       "      <td id=\"T_1a279_row3_col2\" class=\"data row3 col2\" >-31.050000</td>\n",
+       "      <td id=\"T_1a279_row3_col3\" class=\"data row3 col3\" >0.800000</td>\n",
+       "      <td id=\"T_1a279_row3_col4\" class=\"data row3 col4\" >-27919.296000</td>\n",
+       "      <td id=\"T_1a279_row3_col5\" class=\"data row3 col5\" >2.400000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_0bb02_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_0bb02_row4_col0\" class=\"data row4 col0\" >2009-01-05 00:00:00</td>\n",
-       "      <td id=\"T_0bb02_row4_col1\" class=\"data row4 col1\" >0.000000</td>\n",
-       "      <td id=\"T_0bb02_row4_col2\" class=\"data row4 col2\" >-31.010000</td>\n",
-       "      <td id=\"T_0bb02_row4_col3\" class=\"data row4 col3\" >-1.900000</td>\n",
-       "      <td id=\"T_0bb02_row4_col4\" class=\"data row4 col4\" >-29854.656000</td>\n",
-       "      <td id=\"T_0bb02_row4_col5\" class=\"data row4 col5\" >2.300000</td>\n",
+       "      <th id=\"T_1a279_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_1a279_row4_col0\" class=\"data row4 col0\" >2009-01-05 00:00:00</td>\n",
+       "      <td id=\"T_1a279_row4_col1\" class=\"data row4 col1\" >0.000000</td>\n",
+       "      <td id=\"T_1a279_row4_col2\" class=\"data row4 col2\" >-31.010000</td>\n",
+       "      <td id=\"T_1a279_row4_col3\" class=\"data row4 col3\" >-1.900000</td>\n",
+       "      <td id=\"T_1a279_row4_col4\" class=\"data row4 col4\" >-29854.656000</td>\n",
+       "      <td id=\"T_1a279_row4_col5\" class=\"data row4 col5\" >2.300000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x2a3d41877c0>"
+       "<pandas.io.formats.style.Styler at 0x2a397ff85b0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "id": "0567f7f6",
    "metadata": {},
    "outputs": [
@@ -607,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "id": "9f3d79c7",
    "metadata": {},
    "outputs": [
@@ -675,7 +683,7 @@
        "4 2009-01-05        1 days"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "id": "6a962ac3",
    "metadata": {},
    "outputs": [
@@ -729,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "id": "58f34d0c",
    "metadata": {},
    "outputs": [
@@ -773,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "id": "cdc237aa",
    "metadata": {},
    "outputs": [
@@ -804,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "id": "b96ec845",
    "metadata": {},
    "outputs": [
@@ -853,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "id": "6c9104e3",
    "metadata": {},
    "outputs": [],
@@ -865,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52aeaf9c",
+   "id": "97bcb1e5",
    "metadata": {},
    "source": [
     "# Resampling"
@@ -873,8 +881,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "a019f158",
+   "execution_count": 60,
+   "id": "d321298e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,8 +902,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "6f792e1d",
+   "execution_count": 61,
+   "id": "9ed71bce",
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cca04047",
+   "id": "8addca57",
    "metadata": {},
    "source": [
     "# Training and Test Data Creation"
@@ -977,8 +985,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "d004e395",
+   "execution_count": 62,
+   "id": "fdcbc0ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,8 +996,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "4720d985",
+   "execution_count": 63,
+   "id": "aac9ea32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,8 +1015,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "5906fc23",
+   "execution_count": 64,
+   "id": "f98ecc86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,8 +1026,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "deb55169",
+   "execution_count": 65,
+   "id": "c5b877e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b9eaa98",
+   "id": "536cb066",
    "metadata": {},
    "source": [
     "# Model - XGBRegressor"
@@ -1036,8 +1044,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "fec2a000",
+   "execution_count": 66,
+   "id": "23fc0041",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,8 +1054,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "54bfe47d",
+   "execution_count": 67,
+   "id": "ff6f4e80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,8 +1065,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "d8093596",
+   "execution_count": 68,
+   "id": "8d6e96ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,8 +1108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "243489bd",
+   "execution_count": 69,
+   "id": "b176ade6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,8 +1122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "888e37b3",
+   "execution_count": 70,
+   "id": "83dd7509",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,8 +1132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "dcdcefb3",
+   "execution_count": 71,
+   "id": "1f84b1da",
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1150,7 @@
        "             tree_method='exact', validate_parameters=1, verbosity=None)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,8 +1161,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "02e0b16c",
+   "execution_count": 72,
+   "id": "707000f3",
    "metadata": {},
    "outputs": [
     {
@@ -1179,8 +1187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "7a6ebf63",
+   "execution_count": 73,
+   "id": "eb71e6d4",
    "metadata": {},
    "outputs": [
     {
@@ -1203,8 +1211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "44c605ff",
+   "execution_count": 74,
+   "id": "eedd6157",
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1224,7 @@
        " 'Rainfall': 170.0}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,8 +1235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "0b1a5a35",
+   "execution_count": 75,
+   "id": "ff600e5f",
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1245,7 @@
        "<AxesSubplot:title={'center':'Feature importance'}, xlabel='F score', ylabel='Features'>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1260,7 +1268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d892fb60",
+   "id": "be06a63b",
    "metadata": {},
    "source": [
     "For Aquifer_Petrignano, Depth_to_Groundwater prediction Temperature and Drainage_Volume are most important features."
@@ -1269,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b06f84e",
+   "id": "a011c7d9",
    "metadata": {},
    "outputs": [],
    "source": []
